added method for copy text

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
                     <p>Ingresa el texto que desees encriptar o desencriptar.</p>
                 </div>
             </div>
+
+            <div class=".result-text">                
+                <textarea id="resultTextArea" cols="25" rows="15"></textarea>
+            </div>
+            <button class="button copy-btn">Copiar texto</button>
         </div>
     </main>
 
