added docs and alerts

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main class="container main">
         <div class="container__form">
             <form>
-                <textarea name="text" id="textArea" cols="60" rows="14" placeholder="Ingrese el texto aqui"></textarea>
+                <textarea name="text" id="textArea" placeholder="Ingrese el texto aqui"></textarea>
                 <div>
                     <div class="container__form-info">
                         <img src="./assets/admiracion.png">
@@ -38,7 +38,7 @@
                 </div>
             </div>
 
-            <div class=".result-text">                
+            <div class="result-text">                
                 <textarea id="resultTextArea" cols="25" rows="15"></textarea>
             </div>
             <button class="button copy-btn">Copiar texto</button>
